Add build folder

--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://woolnd.github.io/react-movie-app"
+  "homepage": "https://woolnd.github.io/react-movie"
 }
